# ACSE

./: README.md
acds-the-day-after-tomorrow/: README.md  References.docx  nicholas_workflow.ipynb  setup.py
acds-the-day-after-tomorrow/ACDS/: __init__.py
acds-the-day-after-tomorrow/ACDS.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
acds-the-day-after-tomorrow/data/: Surprise_Storm_Predicted.csv
acds-the-day-after-tomorrow/docs/: issues-spec.md
acs-deepimpact-atira/.github/: pull_request_template.md
acs-deepimpact-atira/examples/: .gitignore
acs-gerardium-rush-ilmentite/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  STATS.md
acs-gerardium-rush-ilmentite/hpc_scripts/: eval_openmp.pbs  eval_openmp.sh  visual_openmp.py
acs-gerardium-rush-ilmentite/include/: CCircuit.h  CSimulator.h  CUnit.h  Genetic_Algorithm.h
acs-gerardium-rush-ilmentite/post-proc/: main.py  plot_testcases.ipynb  requirements.txt
acs-gerardium-rush-ilmentite/src/: CCircuit.cpp  CMakeLists.txt  CSimulator.cpp  Genetic_Algorithm.cpp  main.cpp
acs-gerardium-rush-ilmentite/tests/: CMakeLists.txt  (+3 more)
advanced-programming-group-xavier/: .gitignore  Doxyfile  GroupProject-Report.docx  README.md
dlmodule-cw1/: README.md  acse-wy1223_DLcw1_clean.ipynb  acse-wy1223_DLcw1_hypertune.ipynb  references.md
dlmodule-cw2/: README.md  acse-wy1223_classified_hands.csv  acse_wy1223_DLcw2_clean.ipynb  acse_wy1223_DLcw2_hypertune.ipynb  references.md  test_hands.7z
dsml4pe-assessment/: dsml4pe-2023-assessment.ipynb  f1_test.csv  litho_estimator.py  references.md  y_pred_notebook.csv
(+665 files in other folders)
